--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "express-bouncer": "^0.2.0",
+    "express-handlebars": "^4.0.4",
+    "express-sequelize": "0.0.4",
     "helmet": "^3.23.2",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
@@ -23,6 +25,11 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "password-validator": "^5.0.3",
+    "pg": "^8.2.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.2.0",
+    "sequelize-cli": "^6.0.0",
     "uniqid": "^5.2.0"
-  }
+  },
+  "devDependencies": {}
 }
