--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "dot-env": "0.0.1",
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
@@ -22,7 +23,9 @@
     "multer": "^1.4.2",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
+    "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^4.0.0",
+    "passport-oauth2": "^1.5.0",
     "password-validator": "^5.0.3",
     "pg": "^8.2.1",
     "pg-hstore": "^2.3.3",
