--- a/frontend/groupomania/package.json
+++ b/frontend/groupomania/package.json
@@ -10,6 +10,11 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "filepond": "^4.19.2",
+    "filepond-plugin-file-validate-type": "^1.2.5",
+    "filepond-plugin-image-crop": "^2.0.4",
+    "filepond-plugin-image-exif-orientation": "^1.0.9",
+    "filepond-plugin-image-preview": "^4.6.4",
     "jwt-decode": "^2.2.0",
     "material-design-icons-iconfont": "^5.0.1",
     "moment": "^2.27.0",
@@ -18,6 +23,7 @@
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-cookie": "^1.1.4",
+    "vue-filepond": "^6.0.2",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.3.3",
     "vuelidate": "^0.7.5",
