--- a/frontend/groupomania/package.json
+++ b/frontend/groupomania/package.json
@@ -15,15 +15,16 @@
     "filepond-plugin-image-crop": "^2.0.4",
     "filepond-plugin-image-exif-orientation": "^1.0.9",
     "filepond-plugin-image-preview": "^4.6.4",
+    "izitoast": "^1.4.0",
     "jwt-decode": "^2.2.0",
     "material-design-icons-iconfont": "^5.0.1",
     "moment": "^2.27.0",
-    "sweetalert": "^2.1.2",
     "sweetalert2": "^9.17.1",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-cookie": "^1.1.4",
     "vue-filepond": "^6.0.2",
+    "vue-izitoast": "^1.2.1",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.3.3",
     "vuelidate": "^0.7.5",
